5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_2908.log
== TEST (2019-03-29 01:26:08) 
-- CODE:
a = 1
b = 2
c = 3
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:51:31) 
-- CODE:
a = 1
b = 2
c = 3
var1 = a**1 + b**2 + c**2 / a + b + c
print var1
-- ERROR:
File "XXXX", line 5
    print var1
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(var1)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:54:01) 
-- CODE:
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = (a**1 + b**2 + c**2) / (a + b + c)
print (var1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:54:20) 
-- CODE:
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = (a**1 + b**2 + c**2) / (a + b + c)
print (var4)
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:55:07) 
-- CODE:
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = (a**1 + b**2 + c**2) / (a + b + c)
print(round(var4, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 01:55:16) 
-- CODE:
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = (a**1 + b**2 + c**2) / (a + b + c)
print(round(var4, 7))
-- EXECUTION TIME:
0.135479
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:55:38) 
-- CODE:
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = (a**1 + b**2 + c**2) / (a + b + c)
print(round(var4, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:57:06) 
-- CODE:
# Leitura de valores de entrada
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = input(a**1 + b**2 + c**2) / (a + b + c)

# Impressao de saidas
print(round(var4, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var4 = input(a**1 + b**2 + c**2) / (a + b + c)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:57:22) 
-- CODE:
# Leitura de valores de entrada
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = input((a**1 + b**2 + c**2) / (a + b + c))

# Impressao de saidas
print(round(var4, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(var4, 7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:58:01) 
-- CODE:
# Leitura de valores de entrada
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = round(input((a**1 + b**2 + c**2) / (a + b + c))), 7

# Impressao de saidas
print(round(var4, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var4 = round(input((a**1 + b**2 + c**2) / (a + b + c))), 7
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:58:22) 
-- CODE:
# Leitura de valores de entrada
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = input((a**1 + b**2 + c**2) / (a + b + c))

# Impressao de saidas

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:58:41) 
-- CODE:
# Leitura de valores de entrada
var1 = a = 1
var2 = b = 2
var3 = c = 3
var4 = input((a**1 + b**2 + c**2) / (a + b + c))

# Impressao de saidas
print(round(var4, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(var4, 7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:02:51) 
-- CODE:
# Leitura de valores de entrada
var1 = (a=1), (b=2), (c=3)
var2 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas
print(round(var4, 7))

-- ERROR:
File "XXXX", line 2
    var1 = (a=1), (b=2), (c=3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:02:55) 
-- CODE:
# Leitura de valores de entrada
var1 = (a=1), (b=2), (c=3)
var2 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- ERROR:
File "XXXX", line 2
    var1 = (a=1), (b=2), (c=3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:03:04) 
-- CODE:
# Leitura de valores de entrada
var1 = (a=1) (b=2) (c=3)
var2 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- ERROR:
File "XXXX", line 2
    var1 = (a=1) (b=2) (c=3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:03:45) 
-- CODE:
# Leitura de valores de entrada
var1 = (a=1)
var2 = (b=2)
var3 =(c=3)
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- ERROR:
File "XXXX", line 2
    var1 = (a=1)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:04:03) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:04:14) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1 b=2 c=3
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- ERROR:
File "XXXX", line 2
    var1 = a=1 b=2 c=3
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:04:15) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1 b=2 c=3
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- ERROR:
File "XXXX", line 2
    var1 = a=1 b=2 c=3
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:04:28) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:04:39) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input((a**1 + b**2 + c**2) / (a + b + c)))

# Impressao de saidas


-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:05:48) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input(digite o númeor de a: ))

# Impressao de saidas


-- ERROR:
File "XXXX", line 5
    var4 = int(input(digite o númeor de a: ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:05:53) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input(digite o númeor de a: ))

# Impressao de saidas


-- ERROR:
File "XXXX", line 5
    var4 = int(input(digite o númeor de a: ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:06:07) 
-- CODE:
# Leitura de valores de entrada
var1 = a=1
var2 = b=2
var3 = c=3
var4 = int(input("Digite o númeor de a: "))

# Impressao de saidas


-- ERROR:
File "XXXX", line 5
    var4 = int(input(digite o númeor de a: ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:06:29) 
-- CODE:
# Leitura de valores de entrada
var4 = int(input("Digite o númeor de a: "))

# Impressao de saidas


-- ERROR:
File "XXXX", line 5
    var4 = int(input(digite o númeor de a: ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:06:58) 
-- CODE:
# Leitura de valores de entrada
a = int(input("Digite o numero: "))

# Impressao de saidas


-- ERROR:
File "XXXX", line 5
    var4 = int(input(digite o númeor de a: ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:09:19) 
-- CODE:
# Leitura de valores de entrada
a = int(input("Digite o numero: "))
b = int(input("Digite o numero: "))
c = int(input("Digite o numero: "))

# Impressao de saidas
print(round(a**1 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**1 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:09:47) 
-- CODE:
# Leitura de valores de entrada
a = int(input("Digite o numero: "))
b = int(input("Digite o numero: "))
c = int(input("Digite o numero: "))

# Impressao de saidas
print(round(a**2 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**2 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:50:22) 
-- CODE:
# Leitura de valores de entrada
a = int(input("Digite o numero: "))
b = int(input("Digite o numero: "))
c = int(input("Digite o numero: "))

# Impressao de saidas
print(round(a**2 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**2 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:51:08) 
-- CODE:
# Leitura de valores de entrada
a = int(input(1))
b = int(input(2))
c = int(input(3))

# Impressao de saidas
print(round(a**2 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**2 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:51:14) 
-- CODE:
# Leitura de valores de entrada
a = int(input(1))
b = int(input(2))
c = int(input(3))

# Impressao de saidas
print(round(a**2 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**2 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:51:52) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)

# Impressao de saidas
print(round(a**2 + b**2 + c**2) / (a + b + c, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a**2 + b**2 + c**2) / (a + b + c, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:53:03) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round(var1) / (var2), 7)

-- OUTPUT:
2.3333333333333335 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:53:14) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round(var1) / (var2, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(var1) / (var2, 7))
TypeError: unsupported operand type(s) for /: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:53:28) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round var1 /var2, 7)

-- ERROR:
File "XXXX", line 8
    print(round var1 /var2, 7)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:53:39) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:53:50) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- EXECUTION TIME:
0.238832
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:53:54) 
-- CODE:
# Leitura de valores de entrada
a = int(1)
b = int(2)
c = int(3)
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:54:33) 
-- CODE:
# Leitura de valores de entrada
a = 1
b = 2
c = 3
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:54:35) 
-- CODE:
# Leitura de valores de entrada
a = 1
b = 2
c = 3
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- EXECUTION TIME:
0.181208
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:03:31) 
-- CODE:
# Leitura de valores de entrada
a = int(input(""))
b = int(input(""))
c = int(input(""))
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:03:37) 
-- CODE:
# Leitura de valores de entrada
a = int(input(""))
b = int(input(""))
c = int(input(""))
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- EXECUTION TIME:
0.278914
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:29:38) 
-- CODE:
# Leitura de valores de entrada
a = float(input(""))
b = float(input(""))
c = float(input(""))
var1 = a**2 + b**2 + c**2
var2 = a + b + c
# Impressao de saidas
print(round (var1 /var2, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:36:35) 
-- CODE:
# Entradas
a = int(input("Determine a: "))
b = int(input("Determine b: "))
c = int(input("Determine c: "))
# Variavel
form = ((a**2) + (b**2) + (c**2) / a + b + c)
# Saida
print(round(form, 7))
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:37:33) 
-- CODE:
# Entradas
a = int(input("Determine a: "))
b = int(input("Determine b: "))
c = int(input("Determine c: "))
# Variavel
form = (((a**2) + (b**2) + (c**2)) / (a + b + c)
# Saida
print(round(form, 7))


-- ERROR:
File "XXXX", line 8
    print(round(form, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:37:47) 
-- CODE:
# Entradas
a = int(input("Determine a: "))
b = int(input("Determine b: "))
c = int(input("Determine c: "))
# Variavel
form = (((a**2) + (b**2) + (c**2)) / (a + b + c))
# Saida
print(round(form, 7))


-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:37:57) 
-- CODE:
# Entradas
a = int(input("Determine a: "))
b = int(input("Determine b: "))
c = int(input("Determine c: "))
# Variavel
form = (((a**2) + (b**2) + (c**2)) / (a + b + c))
# Saida
print(round(form, 7))
-- EXECUTION TIME:
0.188
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
